# auto_fast_docs

./: 404.html  README.md  auto-doc.py  auto_increment_version.py  index.html  objects.inv  old.setup.py  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci-cd.yml  python-publish.yml
auto_doc/: MkdocsConfigurator.html  PyfileParser.html  RepositoryConfigurator.html  __init__.py  auto_doc.py  console_mkds_make_docfiles.html
auto_doc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
auto_fast_docs/: __init__.py  auto_doc.py  discover.py  mkdocs_template.yml
auto_fast_docs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
discover/: find_files.html  find_python_files.html  qregexp.html
search/: search_index.json
